feat(scheduler): integrate ApiCardService for enhanced card search in TournamentDeckScheduler